cambio en header

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     background-color: #af4c86dc;
     padding: 20px;
     text-align: center;
-    color: white;
+    color: rgb(230, 214, 214);
 }
 
 /* Estilos para la barra de navegación */
