--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
  /* Estilos para el encabezado */
  header {
-    background-color: #c5629cdc;
+    background-color: hsla(325, 46%, 58%, 0.863);
     padding: 20px;
     text-align: center;
     color: rgb(230, 214, 214);
